added wishlist management
